templates/aws-node-termination-handler-2_template.yaml
---
# Source: aws-node-termination-handler-2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: release-name-aws-node-termination-handler-2
    namespace: default
    labels:
        helm.sh/chart: "aws-node-termination-handler-2-0.2.0"
        app.kubernetes.io/name: "aws-node-termination-handler-2"
        app.kubernetes.io/instance: "release-name"
        app.kubernetes.io/version: "2.0.0-beta"
        app.kubernetes.io/managed-by: "Helm"
spec:
    type: ClusterIP
    selector:
        app.kubernetes.io/name: "aws-node-termination-handler-2"
        app.kubernetes.io/instance: "release-name"
    ports:
        - name: http-metrics
          port: 8080
          protocol: TCP
          targetPort: http-metrics
        - name: http-probes
          port: 8081
          protocol: TCP
          targetPort: http-probes
        - name: https-webhook
          port: 443
          protocol: TCP
          targetPort: https-webhook
---
# Source: aws-node-termination-handler-2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: release-name-aws-node-termination-handler-2
    namespace: default
    labels:
        helm.sh/chart: "aws-node-termination-handler-2-0.2.0"
        app.kubernetes.io/name: "aws-node-termination-handler-2"
        app.kubernetes.io/instance: "release-name"
        app.kubernetes.io/version: "2.0.0-beta"
        app.kubernetes.io/managed-by: "Helm"
spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app.kubernetes.io/name: "aws-node-termination-handler-2"
            app.kubernetes.io/instance: "release-name"
    template:
        metadata:
            labels:
                app.kubernetes.io/name: "aws-node-termination-handler-2"
                app.kubernetes.io/instance: "release-name"
        spec:
            serviceAccountName: release-name-aws-node-termination-handler-2
            securityContext:
                fsGroup: 1000
            priorityClassName: "system-cluster-critical"
            nodeSelector:
                kubernetes.io/os: linux
            containers:
                - name: controller
                  image: public.ecr.aws/aws-ec2/aws-node-termination-handler-2/controller:v2.0.0-beta
                  imagePullPolicy: IfNotPresent
                  ports:
                      - name: http-metrics
                        containerPort: 8080
                        protocol: TCP
                      - name: http-probes
                        containerPort: 8081
                        protocol: TCP
                  livenessProbe:
                      httpGet:
                          path: /healthz
                          port: http-probes
                  readinessProbe:
                      httpGet:
                          path: /readyz
                          port: http-probes
                  resources:
                      limits:
                        cpu: 1
                        memory: 1Gi
                      requests:
                        cpu: 1
                        memory: 1Gi
                - name: webhook
                  image: public.ecr.aws/aws-ec2/aws-node-termination-handler-2/webhook:v2.0.0-beta
                  imagePullPolicy: IfNotPresent
                  ports:
                      - name: https-webhook
                        containerPort: 8443
                        protocol: TCP
                  livenessProbe:
                      httpGet:
                          port: https-webhook
                          scheme: HTTPS
                          path: /healthz
                  readinessProbe:
                      httpGet:
                          port: https-webhook
                          scheme: HTTPS
                          path: /readyz
                  resources:
                      limits:
                        cpu: 100m
                        memory: 50Mi
                      requests:
                        cpu: 100m
                        memory: 50Mi
---
# Source: aws-node-termination-handler-2/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
    name: defaulting.webhook.terminators.k8s.aws
    namespace: default
    labels:
        helm.sh/chart: "aws-node-termination-handler-2-0.2.0"
        app.kubernetes.io/name: "aws-node-termination-handler-2"
        app.kubernetes.io/instance: "release-name"
        app.kubernetes.io/version: "2.0.0-beta"
        app.kubernetes.io/managed-by: "Helm"
webhooks:
    - name: defaulting.webhook.terminators.k8s.aws
      admissionReviewVersions: ["v1"]
      clientConfig:
          service:
              name: release-name-aws-node-termination-handler-2
              namespace: default
      failurePolicy: Fail
      sideEffects: None
      rules:
          - apiGroups: ["k8s.aws"]
            apiVersions: ["v1alpha1"]
            resources: ["terminators", "terminators/status"]
            operations: ["CREATE", "UPDATE"]
---
# Source: aws-node-termination-handler-2/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
    name: validation.webhook.terminators.k8s.aws
    namespace: default
    labels:
        helm.sh/chart: "aws-node-termination-handler-2-0.2.0"
        app.kubernetes.io/name: "aws-node-termination-handler-2"
        app.kubernetes.io/instance: "release-name"
        app.kubernetes.io/version: "2.0.0-beta"
        app.kubernetes.io/managed-by: "Helm"
webhooks:
    - name: validation.webhook.terminators.k8s.aws
      admissionReviewVersions: ["v1"]
      clientConfig:
          service:
              name: release-name-aws-node-termination-handler-2
              namespace: default
      failurePolicy: Fail
      sideEffects: None
      rules:
          - apiGroups: ["k8s.aws"]
            apiVersions: ["v1alpha1"]
            resources: ["terminators", "terminators/status"]
            operations: ["CREATE", "DELETE", "UPDATE"]
